[package]
name = "sha3"
version = "0.11.0-pre.4"
description = """
Pure Rust implementation of SHA-3, a family of Keccak-based hash functions
including the SHAKE family of eXtendable-Output Functions (XOFs), as well as
the accelerated variant TurboSHAKE
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/sha3"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "sha3", "keccak", "hash", "digest"]
categories = ["cryptography", "no-std"]
rust-version = "1.81"

[dependencies]
digest = "=0.11.0-pre.9"
keccak = { git = "https://github.com/lita-xyz/sponges" }
const-oid = "=0.10.0-rc.3"
block-buffer = "=0.11.0-rc.3"
hybrid-array = "=0.2.3"
crypto-common = "=0.2.0-rc.1"

[dev-dependencies]
digest = { version = "=0.11.0-pre.9", features = ["dev"] }
hex-literal = "0.4"
base16ct = { version = "0.2", features = ["alloc"] }

[features]
default = ["oid", "std"]
std = ["digest/std"]
oid = ["digest/oid"] # Enable OID support.
zeroize = ["digest/zeroize"]
asm = ["keccak/asm"] # Enable ASM (currently ARMv8 only).
reset = [] # Enable reset functionality

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
